@@ -56,9 +56,13 @@ class GO_Email_Controller_Message extends GO_Base_Controller_AbstractController 
 	}
 
 
-	private function _moveMessages($imap, $params, &$response){
+	private function _moveMessages($imap, $params, &$response, $account){
 		if(isset($params['action']) && $params['action']=='move') {
 
+			if(!$account->checkPermissionLevel(GO_Base_Model_Acl::WRITE_PERMISSION)){
+				throw new GO_Base_Exception_AccessDenied();
+			}
+			
 			$messages = json_decode($params['messages']);
 			$imap->move($messages, $params['to_mailbox']);
 
@@ -224,7 +228,7 @@ class GO_Email_Controller_Message extends GO_Base_Controller_AbstractController 
 		$response['drafts']=!empty($account->drafts) && strpos($params['mailbox'],$account->drafts)===0;
 		$response['trash']=!empty($account->trash) && strpos($params['mailbox'],$account->trash)===0;
 
-		$this->_moveMessages($imap, $params, $response);
+		$this->_moveMessages($imap, $params, $response,$account);
 
 
 		$sort=isset($params['sort']) ? $params['sort'] : 'from';
@@ -377,7 +381,9 @@ class GO_Email_Controller_Message extends GO_Base_Controller_AbstractController 
 
 		$account = GO_Email_Model_Account::model()->findByPk($params['account_id']);
 
-		if(!$account->checkPermissionLevel(GO_Email_Model_Account::ACL_DELEGATED_PERMISSION))
+		$requiredPermissionLevel = $params["flag"]=='Seen' && empty($params["clear"]) ? GO_Email_Model_Account::ACL_DELEGATED_PERMISSION : GO_Base_Model_Acl::WRITE_PERMISSION;
+
+		if(!$account->checkPermissionLevel($requiredPermissionLevel))
 		  throw new GO_Base_Exception_AccessDenied();
 
 		$imap = $account->openImapConnection($params["mailbox"]);
